crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__parse_word_with_offset@TreeSitter.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: "(word, errors.into_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 1000,
                end: 1005,
            },
            word_id: None,
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "world",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
