crates/talkbank-parser-tests/tests/integration/snapshots/integration__offset_tests__word_parses_with_offset.snap
---
source: crates/talkbank-parser-tests/tests/integration/offset_tests.rs
expression: word
---
Some(
    Word {
        span: Span {
            start: 100,
            end: 107,
        },
        word_id: None,
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "hello",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: Some(
            Shortcut,
        ),
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                <uninit>,
            ),
        ),
    },
)
